<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg" >
        
	<TextView 
	    android:text="@string/txtSelectSource"
	    android:textSize="20sp"
	    android:layout_marginTop="20sp"
	    android:layout_width="wrap_content"
	    android:textColor="#101010"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"  />
	
	<AutoCompleteTextView
	    android:id="@+id/actvSource"
	    android:layout_width="200dp"
	    android:layout_marginTop="10sp"
	    android:layout_gravity="center_horizontal"
	    android:layout_height="wrap_content" />	
	
	<TextView 
	    android:text="@string/txtSelectDestination"
	    android:textSize="20sp"
	    android:layout_marginTop="15sp"
	    android:layout_width="wrap_content"
	    android:textColor="#101010"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"  />
	
	<AutoCompleteTextView
	    android:id="@+id/actvDestination"
	    android:layout_width="200dp"
	    android:layout_marginTop="10sp"
	    android:layout_gravity="center_horizontal"
	    android:layout_height="wrap_content" />
	
	
	<Button 
        android:id="@+id/btnFindRoutes"
        android:text="@string/btnRouteSubmitText"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#1200ff"
        android:layout_height="wrap_content" />

	
	<ListView 
	    android:id="@+id/listRoutes"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1" >
	    
	</ListView>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20sp"
    	android:gravity="center_horizontal" >
    		
		<Button 
	        android:id="@+id/btnAddRoute"
        	android:text="Add a Route"        	
        	android:layout_width="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:textStyle="bold"
        	android:textColor="#1200ff"
        	android:layout_height="wrap_content"
        	android:visibility="gone" />
				
		<Button 
	        android:id="@+id/btnOthers"
        	android:text="Route by Users"
        	android:layout_width="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:textStyle="bold"
        	android:textColor="#1200ff"
        	android:layout_height="wrap_content"
        	android:visibility="gone" />
		
	</LinearLayout>
	
	
	<ExpandableListView
	    android:id="@+id/expListRoutes"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:visibility="gone"
	    android:layout_weight="1" >
	    
	</ExpandableListView>
	    
</LinearLayout>